# div_growth_dashboard_bot

./: .gitignore  Dockerfile  NOTES.md  README.md  TODO.md  app.py  docker-compose.yml  example.env  manage.py  pyproject.toml  requirements.txt  run.sh
app/: app.py  my_database.db
app/account/: live.py
app/db/: load.py
app/features/account/: distribution.py  portfolio.py
app/features/scraper/: SCRAPERS.MD  scraper.py
app/web/: dashboard.py
data/: data.db
div_growth_dashboard_bot/: asgi.py  settings.py  urls.py  wsgi.py
functions/: Dockerfile  core.py  lookup.py  population.py
functions/db/: cache.py
functions/scraper/: Dockerfile
playwright/: Dockerfile
scripts/: SCRIPTS.MD
