[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["0xV1c10u5 <206298950+0xV1c10u5@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
